--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animated-loader": "^0.0.9",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-datetime-picker": "^9.2.0",
